--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ body, html {
 
 .btn {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
     padding: 16px;
     height: 54px;
@@ -22,6 +24,7 @@ body, html {
     border-radius: 10px;
     text-transform: uppercase;
     color: #fff;
+    text-decoration: none;
     background: linear-gradient(184.72deg, rgba(255, 0, 0, 0.45) -7.49%, rgba(255, 0, 0, 0.45) -7.48%, rgba(139, 1, 1, 0.45) 43.79%, rgba(16, 1, 1, 0.76) 97.75%);
 }
 
